--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "postinstall": "prisma generate",
     "db:start": "docker compose up -d",
     "db:stop": "docker compose down",
     "db:restart": "docker compose restart",
@@ -18,14 +19,19 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^6.19.0",
+    "@tailwindcss/typography": "^0.5.19",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "iron-session": "^8.0.4",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "prisma": "^6.19.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
